# perception-training

./: .gitignore  README.md  deploy.sh  pyproject.toml
.github/workflows/: deploy.yml
configs/: detection_classic_classes.json
scripts/: export_dataset.py  fit_homography.py  predict_and_fit_homography.py  report_basket_samples.py  train_basket.py
scripts/dataset/: fit_homography.py  generate_keypoints.py
scripts/detection/: build_attribute_prediction_viewer.py  build_cluster_split.py  evaluate_attributes.py  evaluate_base_detections.py  evaluate_rfdetr.py  train_dinov3.py  train_rfdetr.py  train_yolo.py
scripts/segmentation/: predict_and_fit_homography.py  train_basket.py
src/court_training/: __init__.py  api.py  augment.py  constants.py  data.py  dataset.py  device.py  flip.py  homography.py  image_io.py  inference.py  loss.py  masks.py  model.py  train_basket.py  warp.py
src/court_training/detection/: __init__.py  augment.py  data.py  inference.py  model.py
src/court_training/segmentation/: inference.py  loss.py  model.py
src/perception_training/: __init__.py  api.py  augment.py  dataset.py  flip.py  homography.py  image_io.py  polygons.py
src/perception_training/detection/: __init__.py  inference.py  metrics.py  model.py
src/perception_training/segmentation/: __init__.py  inference.py  model.py
tests/: test_api.py
