[project]
name = "court-training"
version = "0.1.0"
description = "Training code for sport court perception models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations==2.0.8",
    "fastapi>=0.124.0",
    "jaxtyping>=0.3.0",
    "loguru>=0.7.3",
    "numpy>=2.2.0",
    "opencv-python-headless==4.13.0.92",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "rfdetr[train]>=1.7.1",
    "sport-analytics",
    "supervision>=0.28.0",
    "timm>=1.0.27",
    "torch>=2.4",
    "torchmetrics>=1.9",
    "tqdm>=4.67.0",
    "typer>=0.15.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["F722", "F821"]

[tool.uv.sources]
sport-analytics = { git = "ssh://git@github.com/sport-analytics-org/sport-analytics.git" }
